--- a/scss/pages/_about.scss
+++ b/scss/pages/_about.scss
@@ -7,6 +7,7 @@
   .about-hero {
     width: 979.5px;
     height: 378.75px;
+    margin-top: 20px;
     background-image: url("../images/home-hero.jpg");
     position: relative;
     z-index: -2;
